fix: add scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,10 +52,6 @@
 @layer base {
   * {
     @apply border-border;
-    scrollbar-width: none;
-  }
-  *::-webkit-scrollbar {
-    display: none;
   }
   body {
     @apply font-sans antialiased bg-background text-foreground;
